# OrderStricker

./: README.md  docker-compose.yml  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.tsx  api.ts  types.ts
orderstricker/: __init__.py
orderstricker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
orderstricker/api/: __init__.py  bootstrap.py  main.py
orderstricker/catalog/: __init__.py  candidate_store.py  mongo_repository.py  redis_cached_repository.py  repository.py  seed_data.py
orderstricker/conversation/: __init__.py  ollama_translate.py  redis_session_store.py  run_actions.py
orderstricker/observability/: __init__.py
orderstricker/order_state/: __init__.py  pair_store.py
orderstricker/ordering/: __init__.py  commands.py  models.py  service.py  state_machine.py
orderstricker/payment/: __init__.py
orderstricker/persistence/: __init__.py  idempotency.py  settings.py
orderstricker/pricing/: __init__.py
orderstricker/user/: __init__.py
tests/: test_ordering.py  test_seed_products.py
