[project]
name = "orderstricker"
version = "0.1.0"
description = "Order management engine with conversational UI (Ollama as translator only)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[project.scripts]
orderstricker-api = "orderstricker.api.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
