[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "orderstricker"
version = "0.1.0"
description = "Catalog browsing and chat-driven selection order flow (Ollama translator); optional Mongo/Redis persistence"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pymongo>=4.6.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
orderstricker-api = "orderstricker.api.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]

# Only ship the Python package `orderstricker` (exclude `frontend/`, tests, etc.)
[tool.setuptools.packages.find]
where = ["."]
include = ["orderstricker*"]
